Changes filenames case

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
       <!--Main features-->
       <section>
         <ul>
-          <li><img src="./images/Group.png" alt="" /></li>
+          <li><img src="./images/group.png" alt="" /></li>
           <li><img src="./images/clock1.png" alt="" /></li>
           <li><img src="./images/diagram1.png" alt="" /></li>
           <li><img src="./images/astronaut1.png" alt="" /></li>
@@ -151,12 +151,12 @@
       <section>
         <h2>Постоянные клиенты</h2>
         <ul>
-          <li><img src="./images/Client1.png" alt="" /></li>
-          <li><img src="./images/Client2.png" alt="" /></li>
-          <li><img src="./images/Client3.png" alt="" /></li>
-          <li><img src="./images/Client4.png" alt="" /></li>
-          <li><img src="./images/Client5.png" alt="" /></li>
-          <li><img src="./images/Client6.png" alt="" /></li>
+          <li><img src="./images/client1.png" alt="" /></li>
+          <li><img src="./images/client2.png" alt="" /></li>
+          <li><img src="./images/client3.png" alt="" /></li>
+          <li><img src="./images/client4.png" alt="" /></li>
+          <li><img src="./images/client5.png" alt="" /></li>
+          <li><img src="./images/client6.png" alt="" /></li>
         </ul>
       </section>
     </main>
