--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
         <li><a href="">Контакты</a></li>
       </ul>
       <address>
-        <a href="malito:info@devstudio.com"> info@devstudio.com </a>
-        <a href="tel:+380961111111"> +380961111111 </a>
+        <a href="malito:info@devstudio.com">info@devstudio.com </a>
+        <a href="tel:+380961111111">+380961111111 </a>
       </address>
     </header>
 
@@ -37,10 +37,10 @@
       <!--Main features-->
       <section>
         <ul>
-          <li><img src="./images/group.png" alt="" /></li>
-          <li><img src="./images/clock1.png" alt="" /></li>
-          <li><img src="./images/diagram1.png" alt="" /></li>
-          <li><img src="./images/astronaut1.png" alt="" /></li>
+          <li><img src="./images/group.png" alt="antenna" /></li>
+          <li><img src="./images/clock1.png" alt="clock" /></li>
+          <li><img src="./images/diagram1.png" alt="diagram" /></li>
+          <li><img src="./images/astronaut1.png" alt="astronaut" /></li>
         </ul>
         <ul>
           <li>
@@ -80,17 +80,17 @@
         </h2>
         <ul>
           <li>
-            <img src="./images/img.jpg" alt="" width="370" />
+            <img src="./images/img.jpg" alt="desktop app" width="370" />
             <a href="">Десктопные приложения</a>
           </li>
 
           <li>
-            <img src="./images/box.jpg" alt="" width="370" />
+            <img src="./images/box.jpg" alt="mobile app" width="370" />
             <a href="">Мобильные приложения</a>
           </li>
 
           <li>
-            <img src="./images/imgf.jpg" alt="" width="370" />
+            <img src="./images/imgf.jpg" alt="design" width="370" />
             <a href="">Дизайнерские решения</a>
           </li>
         </ul>
@@ -102,8 +102,12 @@
         </h2>
         <ul>
           <li>
-            <img src="./images/proddes.png" alt="" width="270" />
-            <h4>John Smith</h4>
+            <img
+              src="./images/proddes.png"
+              alt="Product Designer photo"
+              width="270"
+            />
+            <h3>John Smith</h3>
             <p>Product Designer</p>
             <ul>
               <li><a href="">Instagram</a></li>
@@ -113,8 +117,12 @@
             </ul>
           </li>
           <li>
-            <img src="./images/frontdev.png" alt="" width="270" />
-            <h4>Marta Stewart</h4>
+            <img
+              src="./images/frontdev.png"
+              alt="Frontend Developer photo"
+              width="270"
+            />
+            <h3>Marta Stewart</h3>
             <p>Frontend Developer</p>
             <ul>
               <li><a href="">Instagram</a></li>
@@ -124,8 +132,8 @@
             </ul>
           </li>
           <li>
-            <img src="./images/mark.png" alt="" width="270" />
-            <h4>Robert Jakis</h4>
+            <img src="./images/mark.png" alt="Marketing photo" width="270" />
+            <h3>Robert Jakis</h3>
             <p>Marketing</p>
             <ul>
               <li><a href="">Instagram</a></li>
@@ -135,8 +143,8 @@
             </ul>
           </li>
           <li>
-            <img src="./images/uides.png" alt="" width="270" />
-            <h4>Martin Doe</h4>
+            <img src="./images/uides.png" alt="Designer photo" width="270" />
+            <h3>Martin Doe</h3>
             <p>UI Designer</p>
             <ul>
               <li><a href="">Instagram</a></li>
@@ -151,12 +159,12 @@
       <section>
         <h2>Постоянные клиенты</h2>
         <ul>
-          <li><img src="./images/client1.png" alt="" /></li>
-          <li><img src="./images/client2.png" alt="" /></li>
-          <li><img src="./images/client3.png" alt="" /></li>
-          <li><img src="./images/client4.png" alt="" /></li>
-          <li><img src="./images/client5.png" alt="" /></li>
-          <li><img src="./images/client6.png" alt="" /></li>
+          <li><img src="./images/client1.png" alt="YA&CO company logo" /></li>
+          <li><img src="./images/client2.png" alt="company logo 1" /></li>
+          <li><img src="./images/client3.png" alt="company logo 2" /></li>
+          <li><img src="./images/client4.png" alt="FP company logo" /></li>
+          <li><img src="./images/client5.png" alt="Brand company logo" /></li>
+          <li><img src="./images/client6.png" alt="company logo 3" /></li>
         </ul>
       </section>
     </main>
@@ -166,8 +174,8 @@
       <address>
         <ul>
           <li>г. Киев, пр-т Леси Украинки, 26</li>
-          <li>info@example.com</li>
-          <li>+38 099 111 11 11</li>
+          <li><a href="malito:info@example.com">info@example.com</a></li>
+          <li><a href="tel:+380991111111">+380961111111</a></li>
         </ul>
       </address>
 
